@@ -18,18 +18,23 @@ this repository contains the full copyright notices and license terms. -->
     <label name="reference"/>
     <field name="reference"/>
     <notebook colspan="6">
-        <page string="Purchase" id="purchase">
+        <page string="Purchase" id="purchase" col="6">
             <label name="purchase_date"/>
             <field name="purchase_date"/>
             <label name="payment_term"/>
             <field name="payment_term"/>
-            <label name="warehouse"/>
-            <field name="warehouse"/>
             <label name="currency"/>
             <field name="currency"/>
-            <field name="lines" colspan="4"
-                view_ids="purchase.purchase_line_view_tree_sequence"/>
-            <group col="2" colspan="2" id="states" yfill="1">
+
+            <label name="warehouse"/>
+            <field name="warehouse"/>
+            <label name="delivery_date"/>
+            <field name="delivery_date"/>
+            <label name="quotation_expire"/>
+            <field name="quotation_expire"/>
+
+            <field name="lines" colspan="6" view_ids="purchase.purchase_line_view_tree_sequence"/>
+            <group col="2" colspan="3" id="states" yfill="1">
                 <label name="invoice_state"/>
                 <field name="invoice_state"/>
                 <label name="shipment_state"/>
@@ -37,7 +42,7 @@ this repository contains the full copyright notices and license terms. -->
                 <label name="state"/>
                 <field name="state"/>
             </group>
-            <group col="2" colspan="2" id="amount" yfill="1">
+            <group col="2" colspan="3" id="amount" yfill="1">
                 <label name="untaxed_amount" xalign="1.0" xexpand="1" xfill="0"/>
                 <field name="untaxed_amount" xalign="1.0" xexpand="0"/>
                 <label name="tax_amount" xalign="1.0" xexpand="1" xfill="0"/>
@@ -51,10 +56,11 @@ this repository contains the full copyright notices and license terms. -->
             <field name="company"/>
             <label name="origin"/>
             <field name="origin"/>
+
             <label name="invoice_method"/>
             <field name="invoice_method"/>
-            <label name="delivery_date"/>
-            <field name="delivery_date"/>
+            <newline/>
+
             <label name="quoted_by"/>
             <field name="quoted_by"/>
             <label name="confirmed_by"/>
