@@ -1,3 +1,4 @@
+* Add quotation expiration date
 
 Version 7.4.0 - 2024-11-04
 --------------------------
